--- a/package.json
+++ b/package.json
@@ -6,5 +6,13 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
+    "webpack": "^5.48.0",
+    "webpack-cli": "^4.7.2"
   }
 }
